package S191220160.Task2;

import S191220160.Task2.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}

